--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         </activity>
         <activity android:name=".overview.OverviewActivity" />
         <activity android:name=".walkthrough.WalkthroughActivity"
-        android:theme="@style/Theme.AppCompat.NoActionBar" />
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:configChanges="orientation"
+        android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
